suite du travail sur le tp de maths

--- a/maths/optimisation/tp3/Untitled.ipynb
+++ b/maths/optimisation/tp3/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "6d9ce7c6",
    "metadata": {},
    "outputs": [
@@ -188,19 +188,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "098f9867",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 0, 2, 1, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# \n",
-    "# Exercice 3 : "
+    "# ============\n",
+    "# Exercice 3 :\n",
+    "# ============\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "\n",
+    "# 1.)\n",
+    "# ---\n",
+    "\n",
+    "def tournee_aleatoire(M) : \n",
+    "    tournee =  random.sample(range(len(M)), len(M))\n",
+    "    # On renvoie une liste de villes au hasard....\n",
+    "    return tournee\n",
+    "\n",
+    "print(tournee_aleatoire(distances_48villes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "510450fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 2, 1, 3, 4, 5], [0, 3, 1, 2, 4, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2.)\n",
+    "# ---\n",
+    "\n",
+    "def eval(T, M):\n",
+    "    return sum(M[T[i]][T[i + 1]] for i in range(len(T) - 1)) + M[T[-1]][T[0]]\n",
+    "\n",
+    "def selection_naturelle(S, p, M):\n",
+    "    evals = [(tournee, eval(tournee, M)) for tournee in S]\n",
+    "    evals.sort(key=lambda x: x[1])  \n",
+    "\n",
+    "    return [tournee for tournee, _ in evals[:p]]\n",
+    "\n",
+    "\n",
+    "n = 10\n",
+    "population_test\n",
+    "for i in range (n) :\n",
+    "    t = tournee_aleatoire(distances_48villes)\n",
+    "    population_test.append(t)\n",
+    "    # print()\n",
+    "    # print(t)\n",
+    "    # print()\n",
+    "\n",
+    "meilleures_tournees = selection_naturelle(population_test, 2, distances_48villes)\n",
+    "\n",
+    "print(meilleures_tournees)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5b85e2be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " t1 :  [4, 3, 2, 0, 1]\n",
+      " t2 :  [1, 4, 3, 2, 0]\n",
+      "[[4, 3, 2, 1, 0], [1, 4, 3, 2, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3.)\n",
+    "# ---\n",
+    "\n",
+    "def croisement(T1, T2):\n",
+    "    n = len(T1)\n",
+    "    i = random.randint(1, n - 1)\n",
+    "\n",
+    "    fille1 = T1[:i] + [ville for ville in T2 if ville not in T1[:i]]\n",
+    "    fille2 = T2[:i] + [ville for ville in T1 if ville not in T2[:i]]\n",
+    "\n",
+    "    return [fille1, fille2]\n",
+    "\n",
+    "t1 = tournee_aleatoire(distances_5villes)\n",
+    "t2 = tournee_aleatoire(distances_5villes)\n",
+    "\n",
+    "filles = croisement(t1, t2)\n",
+    "\n",
+    "print(\" t1 : \", t1)\n",
+    "print(\" t2 : \", t2)\n",
+    "print(filles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c786c719",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 0, 2, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 4.)\n",
+    "# ---\n",
+    "\n",
+    "from random import randrange\n",
+    "\n",
+    "def echange(T, i, j):\n",
+    "    T[i], T[j] = T[j], T[i]\n",
+    "    return T\n",
+    "\n",
+    "def mutation(T, x):\n",
+    "    if randrange(0, 10000) / 10000 < x:\n",
+    "        i, j = randrange(1, len(T)), randrange(1, len(T))\n",
+    "        T = echange(T, i, j)\n",
+    "\n",
+    "    return T\n",
+    "\n",
+    "t = [1, 3, 0, 2, 5, 4]\n",
+    "probabilite_mutation = 0.1\n",
+    "\n",
+    "t_mutee = mutation(t, probabilite_mutation)\n",
+    "print(t_mutee)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4f49d8df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4, 30, 20, 11, 31, 47, 25, 1, 34, 43, 19, 8, 0, 42, 33, 7, 36, 22, 38, 10, 18, 24, 12, 13, 40, 44, 5, 39, 28, 3, 41, 46, 17, 2, 27, 45, 29, 15, 37, 26, 16, 23, 9, 21, 32, 35, 6, 14], [43, 13, 10, 7, 26, 20, 45, 32, 38, 39, 5, 30, 0, 22, 42, 33, 24, 11, 31, 4, 37, 29, 6, 1, 18, 19, 12, 34, 44, 41, 47, 15, 27, 8, 16, 3, 25, 28, 17, 21, 2, 46, 40, 14, 36, 35, 23, 9], [4, 19, 2, 20, 22, 35, 42, 45, 18, 12, 17, 27, 5, 32, 7, 8, 47, 37, 15, 41, 34, 1, 14, 9, 29, 13, 11, 6, 46, 40, 39, 44, 10, 0, 28, 43, 36, 24, 38, 31, 30, 21, 16, 26, 23, 33, 25, 3], [36, 5, 24, 15, 37, 12, 38, 44, 4, 6, 22, 26, 31, 21, 17, 27, 11, 25, 0, 1, 18, 29, 45, 30, 42, 7, 33, 19, 32, 16, 35, 8, 39, 34, 23, 40, 10, 14, 46, 2, 13, 28, 41, 3, 20, 9, 43, 47], [20, 43, 40, 3, 36, 13, 33, 9, 25, 34, 23, 19, 28, 39, 14, 42, 31, 24, 6, 10, 22, 5, 0, 46, 32, 45, 30, 8, 26, 37, 41, 15, 1, 2, 35, 11, 17, 12, 7, 38, 44, 27, 18, 21, 16, 29, 4, 47], [22, 17, 31, 44, 7, 14, 12, 18, 11, 21, 8, 32, 42, 1, 16, 36, 15, 10, 3, 28, 43, 35, 2, 4, 25, 41, 47, 23, 26, 24, 0, 39, 5, 30, 46, 29, 19, 27, 34, 33, 20, 6, 45, 37, 40, 13, 38, 9], [46, 9, 15, 42, 20, 4, 25, 2, 26, 24, 28, 40, 31, 3, 41, 13, 43, 1, 47, 36, 8, 33, 45, 39, 32, 22, 37, 16, 5, 14, 0, 27, 6, 18, 23, 10, 17, 29, 12, 11, 35, 21, 19, 30, 38, 7, 44, 34], [20, 11, 9, 8, 34, 46, 27, 13, 28, 12, 47, 26, 16, 43, 1, 41, 21, 23, 44, 14, 37, 5, 17, 42, 30, 24, 19, 0, 6, 33, 39, 32, 36, 29, 45, 3, 25, 22, 10, 40, 38, 2, 18, 31, 7, 15, 35, 4], [11, 23, 40, 42, 44, 36, 28, 30, 19, 22, 5, 16, 45, 27, 31, 15, 6, 24, 47, 38, 14, 8, 29, 18, 43, 39, 0, 26, 1, 12, 33, 20, 34, 3, 10, 21, 7, 9, 25, 2, 17, 32, 37, 46, 13, 41, 4, 35], [24, 23, 4, 7, 26, 17, 18, 28, 9, 25, 29, 36, 41, 5, 43, 47, 1, 21, 39, 40, 33, 13, 20, 0, 30, 14, 32, 31, 42, 35, 44, 22, 11, 8, 12, 46, 37, 27, 16, 2, 45, 38, 15, 10, 19, 34, 6, 3], [29, 21, 0, 28, 5, 34, 11, 27, 30, 20, 1, 2, 33, 7, 15, 17, 3, 44, 23, 22, 4, 26, 6, 10, 46, 14, 24, 16, 36, 13, 35, 31, 47, 39, 12, 37, 8, 19, 43, 40, 32, 18, 42, 9, 25, 45, 41, 38], [23, 27, 46, 17, 42, 2, 25, 31, 3, 44, 33, 28, 43, 20, 41, 0, 24, 4, 19, 8, 45, 29, 40, 6, 30, 26, 38, 15, 14, 36, 32, 47, 34, 12, 9, 16, 18, 5, 13, 39, 35, 10, 37, 22, 1, 21, 11, 7], [27, 18, 37, 5, 32, 14, 38, 2, 25, 41, 19, 0, 35, 34, 33, 17, 12, 6, 42, 8, 28, 45, 13, 23, 11, 31, 46, 30, 21, 3, 47, 40, 24, 22, 20, 9, 43, 16, 29, 36, 44, 7, 10, 15, 39, 4, 1, 26], [2, 40, 24, 18, 16, 31, 32, 47, 15, 11, 41, 38, 34, 37, 13, 39, 42, 19, 46, 27, 3, 43, 45, 29, 9, 30, 10, 7, 21, 8, 33, 0, 28, 12, 35, 5, 26, 14, 36, 22, 20, 25, 17, 6, 44, 23, 4, 1], [3, 28, 40, 16, 23, 29, 21, 30, 18, 1, 8, 10, 45, 46, 7, 19, 47, 12, 22, 32, 37, 38, 4, 44, 11, 42, 6, 17, 2, 9, 31, 24, 0, 34, 20, 33, 14, 39, 15, 36, 13, 35, 43, 5, 41, 26, 27, 25], [24, 13, 47, 46, 4, 27, 0, 40, 23, 41, 5, 32, 12, 9, 22, 11, 29, 1, 2, 33, 20, 28, 3, 35, 42, 43, 45, 15, 39, 34, 19, 37, 7, 8, 44, 36, 25, 21, 10, 14, 26, 31, 16, 17, 30, 18, 6, 38], [41, 1, 16, 30, 42, 12, 10, 26, 9, 37, 36, 43, 17, 25, 7, 13, 5, 45, 44, 21, 0, 31, 35, 4, 27, 14, 3, 23, 47, 46, 32, 38, 28, 39, 20, 11, 29, 18, 22, 33, 8, 6, 24, 40, 2, 15, 19, 34], [35, 7, 22, 8, 26, 31, 19, 16, 9, 41, 28, 1, 30, 25, 36, 18, 34, 21, 5, 15, 46, 43, 37, 42, 44, 23, 20, 45, 4, 17, 32, 6, 24, 40, 14, 11, 27, 39, 0, 47, 10, 3, 33, 38, 12, 2, 13, 29], [31, 28, 20, 33, 25, 47, 7, 34, 1, 26, 32, 21, 15, 40, 0, 44, 13, 46, 12, 11, 38, 19, 39, 37, 2, 8, 35, 41, 23, 17, 42, 14, 36, 24, 6, 3, 30, 5, 4, 27, 18, 29, 43, 16, 9, 45, 22, 10], [34, 15, 17, 47, 8, 32, 6, 41, 26, 42, 30, 39, 23, 16, 27, 18, 2, 46, 29, 1, 3, 31, 43, 45, 22, 20, 19, 5, 36, 4, 33, 24, 0, 10, 35, 11, 21, 37, 44, 40, 12, 38, 25, 14, 9, 28, 7, 13]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 5.)\n",
+    "# ---\n",
+    "\n",
+    "def AlgoGenetique(M) :\n",
+    "    \n",
+    "    nbPop = 100\n",
+    "    nbMeilleurs = 20\n",
+    "    proMutation = 0.1\n",
+    "    pop = []\n",
+    "\n",
+    "    for i in range(nbPop):\n",
+    "        t = tournee_aleatoire(M)\n",
+    "        pop.append(t)\n",
+    "        \n",
+    "    meilleures = selection_naturelle(pop, nbMeilleurs, M)\n",
+    "\n",
+    "    meilleuresMutees = [mutation(tournee, proMutation) for tournee in meilleures]\n",
+    "\n",
+    "    return meilleuresMutees\n",
+    "    \n",
+    "print(AlgoGenetique(distances_48villes))\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "510450fb",
+   "id": "2a8756c2",
    "metadata": {},
    "outputs": [],
    "source": []
